--- a/index.html
+++ b/index.html
@@ -5,8 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <h1>hello world</h1>
+    
+    <header class="header">
+        <nav class="navber">
+            <img src="assets/logo.png" alt="" class="nav-logo">
+            <ul class="link inter-font">
+                <span class="link-span">
+                    <li class="nav-link  home-link"><a href="#" class="font-color-3">Home</a></li>
+                <li class="nav-link "><a href="#" class="font-color-2">Shop</a></li>
+                <li class="nav-link "><a href="#" class="font-color-2">About us</a></li>
+                </span>
+                <li class="nav-link"><a href="#" class="font-color-1"><i class="fa-solid fa-cart-shopping"></i> Cart ($56)</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="hero-banner">
+            <div class="banner-contant">
+                <h1 class="banner-title noto-serif-font">
+                    <span class="font-color-1">ALWAYS</span> <span class="secondary-color">FRESH</span> <br>
+                   <span class="secondary-color"> FLOWERS</span>
+                </h1>
+                <p class="banner-discription inter-font font-color-4">
+                    Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. 
+                </p>
+            </div>
+            <div class="banner-img">
+                <img src="assets/hero-flower.png" alt="This is a picture of flowers.">
+            </div>
+        </section>
+        
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
