an added our-plants section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,88 @@
                 <img src="assets/hero-flower.png" alt="This is a picture of flowers.">
             </div>
         </section>
-        
+        <section class="our-plants">
+            <h1 class="plants-title noto-serif-font center font-color-1">
+                <span class="secondary-color">Our</span> Plants
+            </h1>
+            <p class="plants-description center font-color-4">
+                Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.
+            </p>
+            <div class="card-container">
+                <div class="card">
+                    <img src="assets/sample-flower-image.png" alt="" class="card-img">
+                    <h3 class="img-title center">Lily Blossom</h3>
+                    <h3 class="img-price center">$20 USD</h3>
+                    <button class="btn-primary">
+                        ADD TO CART
+                    </button>
+
+                </div>
+                <div class="card">
+                    <img src="assets/sample-flower-image.png" alt="" class="card-img">
+                    <h3 class="img-title center">Lily Blossom</h3>
+                    <h3 class="img-price center">$20 USD</h3>
+                    <button class="btn-primary">
+                        ADD TO CART
+                    </button>
+
+                </div>
+                <div class="card">
+                    <img src="assets/sample-flower-image.png" alt="" class="card-img">
+                    <h3 class="img-title center">Lily Blossom</h3>
+                    <h3 class="img-price center">$20 USD</h3>
+                    <button class="btn-primary">
+                        ADD TO CART
+                    </button>
+
+                </div>
+                <div class="card">
+                    <img src="assets/sample-flower-image.png" alt="" class="card-img">
+                    <h3 class="img-title center">Lily Blossom</h3>
+                    <h3 class="img-price center">$20 USD</h3>
+                    <button class="btn-primary">
+                        ADD TO CART
+                    </button>
+
+                </div>
+                <div class="card">
+                    <img src="assets/sample-flower-image.png" alt="" class="card-img">
+                    <h3 class="img-title center">Lily Blossom</h3>
+                    <h3 class="img-price center">$20 USD</h3>
+                    <button class="btn-primary">
+                        ADD TO CART
+                    </button>
+
+                </div>
+                <div class="card">
+                    <img src="assets/sample-flower-image.png" alt="" class="card-img">
+                    <h3 class="img-title center">Lily Blossom</h3>
+                    <h3 class="img-price center">$20 USD</h3>
+                    <button class="btn-primary">
+                        ADD TO CART
+                    </button>
+
+                </div>
+                <div class="card">
+                    <img src="assets/sample-flower-image.png" alt="" class="card-img">
+                    <h3 class="img-title center">Lily Blossom</h3>
+                    <h3 class="img-price center">$20 USD</h3>
+                    <button class="btn-primary">
+                        ADD TO CART
+                    </button>
+
+                </div>
+                <div class="card">
+                    <img src="assets/sample-flower-image.png" alt="" class="card-img">
+                    <h3 class="img-title center">Lily Blossom</h3>
+                    <h3 class="img-price center">$20 USD</h3>
+                    <button class="btn-primary">
+                        ADD TO CART
+                    </button>
+
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
