an added footer part in this project

--- a/index.html
+++ b/index.html
@@ -179,18 +179,49 @@
                 <h1 class="join-title noto-serif-font center">
                     Join the colorful Bunch
                 </h1>
-                <div class=" join center ">
+            <div class=" join center ">
                 <input type="email" name="email" id="email" required placeholder="Write email" class=" inter-font ">
                 <button class=" join-button btn-primary inter-font center">
                     Subscribe
                 </button>
-
             </div>
         </section>  
     </main>
 
-    <footer>
-
+    <footer class="footer">
+        <div class="footer-container inter-font">
+            <div class="footer-logo">
+                <img src="assets/logo.png" alt="">
+                <p class="footer-logo-description font-color-4">
+                    Indulge your senses with the <br> beauty and fragrance of our fresh <br> flower shop. 
+                </p>
+            </div>
+            <div class="home-column">
+                <ul>
+                    <li>Home</li>
+                    <li>About Us</li>
+                    <li>Blog</li>
+                    <li>FAQ</li>
+                    <li>Contact Us</li>
+                </ul>
+            </div>
+            <div class="feature-column">
+                <ul>
+                    <li>Features</li>
+                    <li>Pricing</li>
+                    <li>Privacy Policy</li>
+                    <li>Terms of Service</li>
+                    <li>Help Center</li>
+                </ul>
+            </div>
+            <div class="icon-column">
+                <img src="assets/icon-linkedin.png" alt="">
+                <img class="twitter" src="assets/icon-twitter.png" alt="">
+                
+                <img src="assets/icon-facebook.png " alt="">
+                <img src="assets/icon-youtube.png" alt="">
+            </div>
+        </div>
     </footer>
 </body>
 </html>
