an added challenge section

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
-    
+<body> 
      <header class="header">
         <nav class="navber">
             <img src="assets/logo.png" alt="" class="nav-logo">
@@ -25,7 +24,6 @@
             </ul>
         </nav>
     </header> 
-
     <main>
          <section class="hero-banner">
             <div class="banner-contant">
@@ -148,32 +146,37 @@
             </ul>
             </div>
         </section> 
-        <!-- <section class="deal">
-
-            <h1 class="deal-title noto-serif-font center">
-                <span class="secondary-color">Latest</span>  <span class="">Deals</span>
-            </h1>
-            <p class="deal-description center font-color-4">
-                Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.
-            </p>
-            <div class="deal-img-container">
-                <div class="deal-img-1">
-                    <img src="assets/deal-ana.png" alt="">
-                    <img src="assets/deal-bloom.png" alt="" id="deal-img">
+        <section class="deal">
+        <div class="deal-section">
+            <div class="div">
+                <div class="div-1">
+                    <h1 class="title-div">
+                        60% Off | Bloom Plant
+                    </h1>
+                    <p class="description-div">
+                        <span class="shop">Shop Now</span>
+                    </p>
+                    </p>
                 </div>
-                <div class="deal-img-2">
-                    <img src="assets/deal-zabo.png" alt="" class="color-effect">
-                    <div class="text-2">
-                        <h1 class="noto-serif-font zobo-plant">
-                            25% Off | Zabo Plant
-                        </h1>
-                        <p class="center inter-font">
-                            Shop Now
-                        </p>
-                    </div>
+                <div class="div-2 border-redius">
+                    <h1 class="title-div">
+                        30% Off | Bloom Plant
+                    </h1>
+                    <p class="description-div">
+                        <span class="shop">Shop Now</span>
+                    </p>
                 </div>
             </div>
-        </section>   -->
+            <div class="div-3">
+                <h1 class="title-div-3">
+                    25% Off | Zabo Plant
+                </h1>
+                <p class="description-div-3">
+                    <span class="shop-now">Shop Now</span>
+                </p>
+            </div>
+        </div>
+        </section>  
         <section class="join-bunch bg-img">
             
                 <h1 class="join-title noto-serif-font center">
@@ -187,7 +190,6 @@
             </div>
         </section>  
     </main>
-
     <footer class="footer">
         <div class="footer-container inter-font">
             <div class="footer-logo">
