--- a/index.html
+++ b/index.html
@@ -147,31 +147,37 @@
             </div>
         </section> 
         <section class="deal">
+            <h1 class="deal-section-title noto-serif-font center">
+                <span class="secondary-color">Latest</span>  <span class="font-color-1">Deals</span>
+            </h1>
+            <p class="deal-section-description center font-color-4 inter-font">
+                Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.
+            </p>
         <div class="deal-section">
             <div class="div">
                 <div class="div-1">
-                    <h1 class="title-div">
+                    <h1 class="title-div noto-serif-font">
                         60% Off | Bloom Plant
                     </h1>
-                    <p class="description-div">
+                    <p class="description-div inter-font">
                         <span class="shop">Shop Now</span>
                     </p>
                     </p>
                 </div>
                 <div class="div-2 border-redius">
-                    <h1 class="title-div">
+                    <h1 class="title-div noto-serif-font">
                         30% Off | Bloom Plant
                     </h1>
-                    <p class="description-div">
+                    <p class="description-div inter-font">
                         <span class="shop">Shop Now</span>
                     </p>
                 </div>
             </div>
             <div class="div-3">
-                <h1 class="title-div-3">
+                <h1 class="title-div-3 noto-serif-font">
                     25% Off | Zabo Plant
                 </h1>
-                <p class="description-div-3">
+                <p class="description-div-3 inter-font">
                     <span class="shop-now">Shop Now</span>
                 </p>
             </div>
